commit032822 fix: pokemon button mobile fix: search bar mobile

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -52,7 +52,7 @@
   }
 
   .pokemonList .pokemon {
-    width: 9.75rem;
+    width: 9.5rem;
     margin-bottom: 0;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
@@ -67,6 +67,7 @@
   #sfMain {
     justify-content: space-between;
     display: flex;
+    width: 100%;
   }
 
   #sfHeader {
